# qtworkbench

./: BuildingQtProjects.md  GlobalVariables.md  ImportingProjects.md  Makefile.am  PluginConfiguration.md  PluginInstallation.md  PluginUsage.md  ProjectHome.md  QtWorkbenchProjects.md  QtWorkbenchTargets.md  qtworkbench-linux.cbp  qtworkbench.cbp
forms/: QtWorkbenchForms.fbp
res/: QtWorkbenchForms.xrc  manifest.xml  qtworkbench_menu.xrc  qtwprojectoptions.xrc
scripts/: wizard.script
src/: qtwconfiguration.cpp  qtwconfiguration.h  qtwmkspecbrowser.h  qtworkbench.cpp  qtworkbench.h  qtwprogenerator.cpp  qtwprogenerator.h  qtwprojecthandler.cpp  qtwprojecthandler.h  qtwprojectoptions.cpp  qtwprojectoptions.h  qtwutilities.h
